fix(technical): fix background position to remove white space

--- a/src/style/technical/technical.component.scss
+++ b/src/style/technical/technical.component.scss
@@ -13,6 +13,6 @@
     background-image: url("/assets/img/layered-waves-haikei.svg");
     background-repeat: no-repeat;
     background-size: cover;
-    background-position-y: 100%;
+    background-position-y: 99%;
   }
 }
